# ImageApprovals

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: check-links.yml  check-single-header.yml
ImageApprovals/: CMakeLists.txt  Version.hpp.in
ImageApprovals/include/: ImageApprovals.hpp
ImageApprovals/include/ImageApprovals/: ColorSpace.hpp  Comparator.hpp  CompareStrategy.hpp  Errors.hpp  Image.hpp  ImageCodec.hpp  ImageComparator.hpp  ImageView.hpp  ImageWriter.hpp  PixelFormat.hpp  QImageView.hpp  Qt5Integration.hpp  StringUtils.hpp  Units.hpp  Version.hpp
ImageApprovals/src/: ColorSpace.cpp  ColorSpaceUtils.cpp  ColorSpaceUtils.hpp  Comparator.cpp  CompareStrategy.cpp  ExrImageCodec.cpp  ExrImageCodec.hpp  Image.cpp  ImageCodec.cpp  ImageComparator.cpp  ImageView.cpp  PixelFormat.cpp  PngImageCodec.cpp  PngImageCodec.hpp  Qt5Integration.cpp  Units.cpp
Tests/src/: PixelDecodeTests.cpp  PngCodecTests.cpp  ThresholdImageComparatorTests.cpp
conan_package/: .gitignore  conandata.yml  conanfile.py
conan_package/test_package/: CMakeLists.txt  conanfile.py  main.cpp
docs/: introduction.md  setup.md
scripts/: ImageApprovalsInfo.hpp.in  pre-commit-single-header  single_header.py  single_header_test.py
single_header/: ImageApprovals.hpp
tests/: CMakeLists.txt  SingleHeader.cpp  TestsConfig.hpp.in
tests/data/: .gitignore  ComparatorTests.Comparator.Using_Approvals__verify_with_EXR.approved.exr  ComparatorTests.Comparator.Using_Approvals__verify_with_EXR.received_ref.exr
tests/data/exr/: README
tests/data/png/: README
tests/data/qimage/: .gitignore
tests/src/: BitwiseCompareStrategyTests.cpp  ComparatorTests.cpp  ErrorTest.cpp  ExrCodecTest.cpp  ImageTest.cpp  ImageViewTests.cpp  ImageWriterTests.cpp  PixelDecodeTests.cpp  PixelPerfectCompareStrategyTests.cpp  PngCodecTests.cpp  QImageTests.cpp  ThresholdCompareStrategyTests.cpp  ThresholdImageComparatorTests.cpp  main.cpp
